# AuraKey

./: .gitignore  README.md  index.html  outline.md  package-lock.json  package.json
.agent/workflows/: tauri-verify.md
assets/AuraHID_v3/: AuraHID_v3.ino
release/: AuraKey-v1.2.7z
scripts/: enumerate_hid.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: macros.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arduino.rs  commands.rs  config.rs  daemon.rs  executor.rs  gamepad.rs  input.rs  ipc.rs  lib.rs  main.rs  recorder.rs  service_main.rs  state.rs  tray_win32.rs
src/components/: HotkeyRecorder.tsx  KeyCapture.tsx  KeyboardLayout.tsx  Keycap.tsx  MacroEditor.tsx  MacroList.tsx  RecordingPanel.tsx  SettingsPanel.tsx  StepEditor.tsx  TimelineView.tsx  TitleBar.tsx
src/components/primitives/: Button.css  Button.tsx  Checkbox.css  Checkbox.tsx  DropdownMenu.css  DropdownMenu.tsx  Input.css  Input.tsx  Popover.css  Popover.tsx  PromptDialog.tsx  ScrollArea.css  ScrollArea.tsx  Select.css  Select.tsx  Separator.css  Separator.tsx  Switch.css  Switch.tsx  Tooltip.css  Tooltip.tsx
src/hooks/: useTauri.ts
src/types/: config.ts
